Get py bindings set up better

--- a/bindings/python3/core/math/BUILD
+++ b/bindings/python3/core/math/BUILD
@@ -1,18 +1,10 @@
-load("@rules_cc//cc:defs.bzl", "cc_library")
-load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
-
-# All of math
-filegroup(
-    name = "math",
-    data = [
-        ":mathutils.so",
-    ],
-)
+load("@pybind11_bazel//:build_defs.bzl", "pybind_library")
 
 # Mathutils
-pybind_extension(
-    name = "mathutils",
-    srcs = ["mathutils_binding.cc"],
+pybind_library(
+    name = "math",
+    srcs = ["math_bindings.cc"],
+    hdrs = ["math_bindings.hh"],
     visibility = ["//visibility:public"],
     deps = [
         "//core/math:mathutils",
