finish packaging ewcorepy

--- a/bindings/python3/core/BUILD
+++ b/bindings/python3/core/BUILD
@@ -1,14 +1,14 @@
-load("@rules_python//python:defs.bzl", "py_library", "py_test")
+load("@rules_python//python:defs.bzl", "py_test")
 load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
 
 
 pybind_extension(
-    name="ewcore",
+    name = "ewcore",
     srcs = ["ewcore_bindings.cc"],
+    visibility = ["//visibility:public"],
     deps = [
         "//bindings/python3/core/math",
     ],
-    visibility = ["//visibility:public"],
 )
 
 py_test(
