Add unit tests to python bindings

--- a/bindings/python3/ewcore/math/BUILD
+++ b/bindings/python3/ewcore/math/BUILD
@@ -1,4 +1,4 @@
-load("@pybind11_bazel//:build_defs.bzl", "pybind_library")
+load("@pybind11_bazel//:build_defs.bzl", "pybind_extension", "pybind_library")
 
 # Mathutils
 pybind_library(
