change output dumping

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,11 +26,7 @@ jobs:
 
     - name: Test
       run: |
-        "${GITHUB_WORKSPACE}/bin/bazel" test //:test --test_verbose_timeout_warnings
-
-    - name: Dump Logs
-      if: always()
-      run: cat bazel-testlogs/**/test.log
+        "${GITHUB_WORKSPACE}/bin/bazel" test //:test --test_verbose_timeout_warnings --test_summary=detailed --test_output=all
 
   build:
     runs-on: ubuntu-latest
