--- a/bindings/python3/ewcore/math/BUILD
+++ b/bindings/python3/ewcore/math/BUILD
@@ -1,12 +1,30 @@
-load("@pybind11_bazel//:build_defs.bzl", "pybind_extension", "pybind_library")
+load("@pybind11_bazel//:build_defs.bzl", "pybind_library")
+
+pybind_library(
+    name = "all_bindings",
+    deps = [
+        ":mathutils_bindings",
+        ":measurement_bindings",
+    ],
+    visibility = ["//visibility:public"],
+)
 
 # Mathutils
 pybind_library(
-    name = "math",
-    srcs = ["math_bindings.cc"],
-    hdrs = ["math_bindings.hh"],
-    visibility = ["//visibility:public"],
+    name = "mathutils_bindings",
+    srcs = ["mathutils_bindings.cc"],
+    hdrs = ["mathutils_bindings.hh"],
     deps = [
         "//ewcore/math:mathutils",
+    ],
+)
+
+# Measurement
+pybind_library(
+    name = "measurement_bindings",
+    srcs = ["measurement_bindings.cc"],
+    hdrs = ["measurement_bindings.hh"],
+    deps = [
+        "//ewcore/math:measurement",
     ],
 )
